使用慕课网redux和redux插件

--- a/css/test-css/src/components/Vh/index.less
+++ b/css/test-css/src/components/Vh/index.less
@@ -6,7 +6,7 @@
   //flex-direction: column;
   .vh-1{
     background-color: red;
-    flex:1 ;
+    flex:0 0 40px ;
   }
   .vh-2{
     background-color: yellow;
