--- a/react-compent/src/App.module.css
+++ b/react-compent/src/App.module.css
@@ -1,7 +1,11 @@
 .App {
-  text-align: center;
+  text-align: left;
+  color:red
 }
-
+.aaa{
+  color: red;
+  font-size: 100px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
