--- a/css/test-css/src/layout/index.less
+++ b/css/test-css/src/layout/index.less
@@ -1,6 +1,9 @@
 @import '../utils/util.less';
 .Layout-div{
   padding-left: 20px;
+  & > * {
+    margin-top: 20px;
+  }
   span{
     color:red;
   }
