伪类选择器

--- a/css/test-css/src/components/WeiLei/index.less
+++ b/css/test-css/src/components/WeiLei/index.less
@@ -1,3 +1,24 @@
 .weiLei {
+  .link{
+    //未点击的链接
+    a:link{
+      color:yellow;
+    }
+    //访问过后的链接
+    a:visited{
+        color:blue;
+    }
+    //点击时候
+    a:active{
+      background-color: blue;
+      font-size: 80px;
+    }
+    //鼠标放上去的样式
+    a:hover{
+        color:red ;
+        font-size: 30px;
+    }
 
+
+  }
 }
