--- a/css/test-css/src/components/ChildChoice/index.less
+++ b/css/test-css/src/components/ChildChoice/index.less
@@ -5,4 +5,47 @@
       color:red;
     }
   }
+  .last-of-type{
+    padding:20px;
+    p:last-of-type{
+      color:red;
+    }
+  }
+  .only-of-type{
+    padding:20px;
+    p:only-of-type{
+      color:red;
+    }
+  }
+  .only-child{
+    padding:20px;
+    p:only-child{
+      color:red;
+    }
+  }
+  .nth-child{
+    padding:20px;
+
+    p:nth-child(1){
+      border:1px solid red;
+    }
+  }
+  .last-child{
+    padding:20px;
+    p:last-child{
+      color:red;
+    }
+  }
+  .first-child{
+    padding:20px;
+    p:first-child{
+      color:red;
+    }
+  }
+  .not{
+    padding:20px;
+    &:not(:last-child){
+      border:1px solid red;
+    }
+  }
 }
