--- a/css/test-css/src/components/JuZhong/index.less
+++ b/css/test-css/src/components/JuZhong/index.less
@@ -1,3 +1,89 @@
 .juZhong {
+  .center{
+    border:1px solid red;
+    width:500px;
+    height:150px;
+    position: relative;
+    //display: inline-block;
+    //.fir-center{
+    //  border: 1px solid red;
+    //  display: inline-block;
+    //  height:100%;
+    //}
+    .in-center{
+      border: 1px solid blue;
+      width:200px;
+      height:80px;
+      position: relative;
+      top:50%;
+      transform: translateY(-50%);//垂直居中
+      margin: 0 auto;//水平居中
+      //display: inline-block;
+      //position: absolute;
+      //top:0px;
+      //bottom:0px;
+      //left:0px;
+      //right:0px;
+      //margin: auto;
+      //margin:0 auto;
+      //display: inline-block;
+      //vertical-align:middle;
+      //display: table-cell;
+      //margin:auto;
+    }
+  }
+  .center1{
+    border: 1px solid red;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width:500px;
+    height:150px;
+    .in-center1{
+      border: 1px solid red;
+    }
+  }
+  .center2{
+    border: 1px solid red;
+    position: relative;
+    display: inline-block;
+    padding:30px ;
+    .in-center2{
+      width:200px;
+      height:80px;
+      border: 1px solid red;
+    }
+  }
+  .center3{
+    border: 1px solid red;
+    position: relative;
+    display: inline-block;
+    padding:30px ;
+    .in-center3{
+      margin:30px;
+      border: 1px solid red;
+    }
+  }
+  .center4{
+    border: 1px solid red;
+    width:500px;
+    height:150px;
+    text-align: center;
+    line-height: 150px;
+    .in-center4{
+
+    }
+  }
+  .center5{
+    border: 1px solid red;
+    text-align: center;
+    padding:30px;
+    .in-center5{
+      margin: 30px;
+    }
+  }
+
+
 
 }
