--- a/js/css/index.css
+++ b/js/css/index.css
@@ -5,9 +5,15 @@ p{
 .desc{
     overflow: visible; /*hidden、scroll、auto、visible 默认会呈现在元素框外面*/
     text-overflow: ellipsis; /*ellipsis 省略号，clip 裁剪*/
-    white-space: pre-wrap; /*pre 保留空白+不换行，nowrap 不换行、pre-wrap 空白+换行、*/
+    white-space: pre; /*pre 保留空白+不换行，nowrap 不换行、pre-wrap 空白+换行、*/
     word-wrap: break-word; /*break-word、normal*/
 }
 .result{
     color:red;
+}
+.red{
+    color:red;
+}
+.green{
+    color:greenyellow;
 }
