js逻辑面试题

--- a/js/css/index.css
+++ b/js/css/index.css
@@ -17,3 +17,10 @@ p{
 .green{
     color:greenyellow;
 }
+.goto{
+    position: fixed;
+    top:10px;
+    right:10px;
+    background-color: burlywood;
+    cursor:pointer;
+}
