--- a/js/css/index.css
+++ b/js/css/index.css
@@ -31,3 +31,10 @@ p{
     background-color: burlywood;
     cursor:pointer;
 }
+.gotoArray{
+    position: fixed;
+    top:70px;
+    right:10px;
+    background-color: burlywood;
+    cursor:pointer;
+}
