--- a/js/css/index.css
+++ b/js/css/index.css
@@ -59,3 +59,10 @@ p{
     background-color: burlywood;
     cursor:pointer;
 }
+.gotoThis{
+    position: fixed;
+    top:190px;
+    right:10px;
+    background-color: burlywood;
+    cursor:pointer;
+}
