恢复初始化

--- a/react-compent/src/App.module.css
+++ b/react-compent/src/App.module.css
@@ -1,11 +1,7 @@
 .App {
-  text-align: left;
-  color:red
+  text-align: center;
 }
-.aaa{
-  color: red;
-  font-size: 100px;
-}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
