--- a/css/test-css/src/components/BoxSizing/index.less
+++ b/css/test-css/src/components/BoxSizing/index.less
@@ -8,9 +8,9 @@
   }
   .border{
     box-sizing:border-box;
-    border:3px solid red;
+    border:3px solid blue;
     padding-left: 30px ;
-    margin-left: 10px;
     width:500px;
+    margin-left: 10px;
   }
 }
