--- a/css/test-css/src/components/Float/index.less
+++ b/css/test-css/src/components/Float/index.less
@@ -2,6 +2,7 @@
   .float-div{
     background-color: red;
     border: 1px solid red;
+    //padding:50px;
     .float-div-left{
 
       float:left;
