--- a/css/test-css/src/components/Choice/index.less
+++ b/css/test-css/src/components/Choice/index.less
@@ -16,6 +16,9 @@
   }
   .father{
     padding:20px;
+    p>span{
+      border: 1px solid blue;
+    }
   }
   //.fa+div{
   //  border:1px solid red;
