add switch 使用return报错

--- a/js/css/index.css
+++ b/js/css/index.css
@@ -122,3 +122,10 @@ p{
     background-color: burlywood;
     cursor:pointer;
 }
+.gotoSwitch{
+    position: fixed;
+    top:460px;
+    right:10px;
+    background-color: burlywood;
+    cursor:pointer;
+}
